--- a/config/server.conf
+++ b/config/server.conf
@@ -4,6 +4,11 @@ https
 	{
 		listen		1080
 		server_name	127.0.0.2
-		return 401	127.0.0.1
+		index		web.html
+		root		/config/
+
+		error_page 404 404.html
+
 	}
+
 }
