--- a/config/server.conf
+++ b/config/server.conf
@@ -7,7 +7,9 @@ https
 		index		web.html
 		root		/config/
 
-		error_page 404 404.html
+		error_page 404 /config/error_page/404.html
+		error_page 403 /config/error_page/403.html
+
 
 	}
 
