code plus propre

--- a/config/server.conf
+++ b/config/server.conf
@@ -7,6 +7,14 @@ https
 		index		web.html
 		root		/config/
 
+		location /location {
+			index location.html
+		}
+
+		location /location {
+			index location.html
+		}
+
 		error_page 404 /config/error_page/404.html
 		error_page 403 /config/error_page/403.html
 
