--- a/config/server.conf
+++ b/config/server.conf
@@ -1,24 +1,19 @@
-https
+https 
 {
 	server
 	{
 		listen		1080
 		server_name	127.0.0.2
-		index		web.html
+		# index		index.html
 		root		/config/
 
 		location /location {
 			index location.html
 		}
 
-		location /location {
-			index location.html
-		}
 
 		error_page 404 /config/error_page/404.html
 		error_page 403 /config/error_page/403.html
-
-
 	}
 
 }
