amelio post et parsing

--- a/config/server.conf
+++ b/config/server.conf
@@ -4,8 +4,8 @@ https
 	{
 		listen		1080
 		server_name	127.0.0.2
-		# index		index.html
-		root		/config/
+		index		index.html
+		root		/config/page/
 
 		location /location {
 			index location.html
