--- a/config/server.conf
+++ b/config/server.conf
@@ -1,19 +1,36 @@
-https 
+https
 {
 	server
 	{
 		listen		1080
 		server_name	127.0.0.2
-		index		index.html
-		root		/config/page/
+		# index		index.html
+		root		/config/
 
 		location /location {
 			index location.html
 		}
-
+		location /location2 {
+			index location2.html
+		}
 
 		error_page 404 /config/error_page/404.html
 		error_page 403 /config/error_page/403.html
 	}
+	server
+	{
+		listen		8080
+		server_name	127.0.0.3
+		index		index.html
+		root		/config/
+		# location /location {
+		# 	index location.html
+		# }
+		# location /location2 {
+		# 	index location2.html
+		# }
 
+		error_page 404 /config/error_page/404.html
+		error_page 403 /config/error_page/403.html
+	}
 }
