--- a/config/server.conf
+++ b/config/server.conf
@@ -4,7 +4,7 @@ https
 	{
 		listen		1080
 		server_name	127.0.0.2
-		# index		index.html
+		index		index.html
 		root		/config/
 
 		location /location {
@@ -14,8 +14,12 @@ https
 			index location2.html
 		}
 
+		max_body_size	1kb
+		auto_index	off
+
 		error_page 404 /config/error_page/404.html
 		error_page 403 /config/error_page/403.html
+		error_page 400 /config/error_page/400.html
 	}
 	server
 	{
@@ -32,5 +36,6 @@ https
 
 		error_page 404 /config/error_page/404.html
 		error_page 403 /config/error_page/403.html
+		error_page 400 /config/error_page/400.html
 	}
 }
