a priori les multiples servers fonctionnent, sauf pour la partie ou chaque client est rediriger sur le bon serveur, atm tout le monde se connecte sur le 1 quelquesoit l'addresse

--- a/config/server.conf
+++ b/config/server.conf
@@ -25,7 +25,7 @@ https
 	{
 		listen		8080
 		server_name	127.0.0.3
-		index		index.html
+		index		index_server2.html
 		root		/config/
 		# location /location {
 		# 	index location.html
