--- a/nginx/www/server.conf
+++ b/nginx/www/server.conf
@@ -2,46 +2,27 @@ https
 {
 	server
 	{
-		listen		8080
-		server_name	127.0.0.1
+		listen		1080
+		server_name	127.0.0.2
 		index		index.html
 		root		/config/
 
 		location /configV2 {
 			index	index2.html
 			root	/configV2/
-			allow_method	POST
+			# allow_method	POST
 		}
 
-		max_body_size	2MB
+		max_body_size	1kb
 		auto_index	on
 
 		error_page 404 /config/error_page/404.html
 		error_page 403 /config/error_page/403.html
 		error_page 400 /config/error_page/400.html
-		error_page 413 /config/error_page/413.html
-		
 	}
 	server
 	{
-		listen		1080
-		server_name	127.0.0.3
-		index		index.html
-		root		/config/
-		# location /location {
-		# 	index location.html
-		# }
-		# location /location2 {
-		# 	index location2.html
-		# }
-
-		error_page 404 /config/error_page/404.html
-		error_page 403 /config/error_page/403.html
-		error_page 400 /config/error_page/400.html
-	}
-	server
-	{
-		listen		1080
+		listen		8080
 		server_name	127.0.0.3
 		index		index.html
 		root		/config/
