amelio parsing et return

--- a/nginx/tools/nginx.conf
+++ b/nginx/tools/nginx.conf
@@ -19,9 +19,8 @@ http {
 		location /pages/{
             # autoindex on;
             # root /var/www/website/;
-			index delete.html;
 			# try_files $uri $uri/ =404;
-			allow_methods POST;
+			return 200 http://127.0.0.2:9000;
 		}
 		location ~* \.css$ {
 			types { 
@@ -30,8 +29,8 @@ http {
 		}
 	}
 	server {
-		listen 9001;
-		server_name 127.0.0.1;
+		listen 9000;
+		server_name 127.0.0.2;
 
         error_log /dev/stderr;
         access_log /var/log/nginx/access.log my_custom_format;
@@ -41,7 +40,6 @@ http {
 		location /pages/{
             # autoindex on;
             # root /var/www/website/;
-			index delete.html;
 			# try_files $uri $uri/ =404;
 		}
 		location ~* \.css$ {
@@ -52,7 +50,7 @@ http {
 	}
 	server {
 		listen 9001;
-		server_name 127.0.0.1;
+		server_name 127.0.0.2;
 
         error_log /dev/stderr;
         access_log /var/log/nginx/access.log my_custom_format;
