--- a/config/server.conf
+++ b/config/server.conf
@@ -2,15 +2,13 @@ https
 {
 	server
 	{
-		listen		8080
-		server_name	127.0.0.1
+		listen		127.0.0.1:8080
+		server_name
 		index		index.html
 		root		/config/
 
 		location /configV2 {
-			index	index2.html
-			root	/configV2/
-			allow_method	POST
+			return 301 http://127.0.0.3:2080
 		}
 
 		max_body_size	2MB
@@ -28,12 +26,6 @@ https
 		server_name	127.0.0.3
 		index		index.html
 		root		/config/
-		# location /location {
-		# 	index location.html
-		# }
-		# location /location2 {
-		# 	index location2.html
-		# }
 
 		error_page 404 /config/error_page/404.html
 		error_page 403 /config/error_page/403.html
@@ -45,12 +37,7 @@ https
 		server_name	127.0.0.3
 		index		index_server2.html
 		root		/config/
-		# location /location {
-		# 	index location.html
-		# }
-		# location /location2 {
-		# 	index location2.html
-		# }
+
 
 		error_page 404 /config/error_page/404.html
 		error_page 403 /config/error_page/403.html
