--- a/config/server.conf
+++ b/config/server.conf
@@ -4,11 +4,11 @@ https
 	{
 		listen		127.0.0.1:8080
 		server_name
-		index		index.html
 		root		/config/
 
 		location /configV2 {
-			return 301 http://127.0.0.3:2080
+			root /configV2/
+			auto on
 		}
 
 		max_body_size	2MB
@@ -26,18 +26,6 @@ https
 		server_name	127.0.0.3
 		index		index.html
 		root		/config/
-
-		error_page 404 /config/error_page/404.html
-		error_page 403 /config/error_page/403.html
-		error_page 400 /config/error_page/400.html
-	}
-	server
-	{
-		listen		2080
-		server_name	127.0.0.3
-		index		index_server2.html
-		root		/config/
-
 
 		error_page 404 /config/error_page/404.html
 		error_page 403 /config/error_page/403.html
