CELA REFONCTIONNE, attention, j'ai hack le .conf pour que ca marche

--- a/config/server.conf
+++ b/config/server.conf
@@ -10,9 +10,9 @@ https
 		location /configV2 {
 			index	index2.html
 			root	/configV2/
-			allow_method	POST
+			allow_method	GET
 		}
-
+		#ABOVE IS A GIGANTIC HACK, we ALWAYS go in location, this NEEDS TO BE FIXEd in code
 		max_body_size	2MB
 		auto_index	on
 
