--- a/config/server.conf
+++ b/config/server.conf
@@ -31,12 +31,13 @@ https
 		error_page 404 /config/error_page/404.html
 		error_page 403 /config/error_page/403.html
 		error_page 400 /config/error_page/400.html
-		# location /location {
-		# 	index location.html
-		# }
-		# location /location2 {
-		# 	index location2.html
-		# }
+		location /location {
+			index location.html
+			allow_method	GET
+		}
+		location /location2 {
+			index location2.html
+		}
 
 	}
 	server
@@ -45,12 +46,13 @@ https
 		server_name	127.0.0.3
 		index		index_server2.html
 		root		/config/
-		# location /location {
-		# 	index location.html
-		# }
-		# location /location2 {
-		# 	index location2.html
-		# }
+		location /location {
+			index location.html
+			allow_method	GET
+		}
+		location /location2 {
+			index location2.html
+		}
 
 		error_page 404 /config/error_page/404.html
 		error_page 403 /config/error_page/403.html
