--- a/config/server.conf
+++ b/config/server.conf
@@ -3,13 +3,10 @@ https
 	server
 	{
 		listen		127.0.0.1:8080
-		server_name
+		server_name ilyan.com
+		index 		index.html
 		root		/config/
 
-		location /configV2 {
-			root /configV2/
-			auto on
-		}
 
 		max_body_size	2MB
 		auto_index	on
@@ -18,14 +15,14 @@ https
 		error_page 403 /config/error_page/403.html
 		error_page 400 /config/error_page/400.html
 		error_page 413 /config/error_page/413.html
-		
 	}
 	server
 	{
 		listen		1080
 		server_name	127.0.0.3
-		index		index.html
+		
 		root		/config/
+		auto_index	on
 
 		error_page 404 /config/error_page/404.html
 		error_page 403 /config/error_page/403.html
