ca casse partout

--- a/config/server.conf
+++ b/config/server.conf
@@ -2,7 +2,7 @@ https
 {
 	server
 	{
-		listen		127.0.0.1:8080
+		listen		127.0.0.1:4080
 		server_name ilyan.com
 		index 		index.html
 		root		/config/
@@ -10,6 +10,7 @@ https
 		location /configV2 {
 			index	index2.html
 			root	/configV2/
+			return 301 http://127.0.0.3:5080
 		}
 	#ABOVE IS A GIGANTIC HACK, we ALWAYS go in location, this NEEDS TO BE FIXEd in code
 		max_body_size	2MB
@@ -22,7 +23,7 @@ https
 	}
 	server
 	{
-		listen		1080
+		listen		5080
 		server_name	127.0.0.3
 		
 		root		/config/
