implemented a scuffed timeout system for cgis, it break other stuff, sad

--- a/config/server.conf
+++ b/config/server.conf
@@ -12,7 +12,6 @@ https
 			root	/configV2/
 			return 301 http://127.0.0.3:5080
 		}
-	#ABOVE IS A GIGANTIC HACK, we ALWAYS go in location, this NEEDS TO BE FIXEd in code
 		max_body_size	2MB
 		auto_index	on
 
@@ -20,6 +19,7 @@ https
 		error_page 403 /config/error_page/403.html
 		error_page 400 /config/error_page/400.html
 		error_page 413 /config/error_page/413.html
+		error_page 504 /config/error_page/504.html
 	}
 	server
 	{
@@ -32,6 +32,7 @@ https
 		error_page 404 /config/error_page/404.html
 		error_page 403 /config/error_page/403.html
 		error_page 400 /config/error_page/400.html
+		error_page 504 /config/error_page/504.html
 		location /location {
 			index location.html
 			allow_method	GET
@@ -58,5 +59,6 @@ https
 		error_page 404 /config/error_page/404.html
 		error_page 403 /config/error_page/403.html
 		error_page 400 /config/error_page/400.html
+		error_page 504 /config/error_page/504.html
 	}
 }
