cookie, ca crash sur refresh, pas de SECRETS

--- a/config/server.conf
+++ b/config/server.conf
@@ -2,16 +2,17 @@ https
 {
 	server
 	{
-		listen		127.0.0.1:8080
-		server_name ilyan.com
+		listen		127.0.0.1:5080
+		server_name 
 		index 		index.html
 		root		/config/
 
-		location /configV2 {
+		location /locV2/ {
 			index	index2.html
 			root	/configV2/
+			allow_method POST
 		}
-	#ABOVE IS A GIGANTIC HACK, we ALWAYS go in location, this NEEDS TO BE FIXEd in code
+
 		max_body_size	2MB
 		auto_index	on
 
@@ -34,9 +35,6 @@ https
 		location /location {
 			index location.html
 			allow_method	GET
-		}
-		location /location2 {
-			index location2.html
 		}
 
 	}
