small commit before merge

--- a/nginx/tools/nginx.conf
+++ b/nginx/tools/nginx.conf
@@ -9,7 +9,7 @@ http {
 	
 	server {
 		listen 9000;
-		server_name 127.0.0.1;
+		server_name 127.0.0.1
 
         error_log /dev/stderr;
         access_log /var/log/nginx/access.log my_custom_format;
