--- a/config/server.conf
+++ b/config/server.conf
@@ -2,24 +2,24 @@ https
 {
 	server
 	{
-		listen		127.0.0.1:5080
-		server_name 
-		index 		index.html
-		root		/config/
+		listen		127.0.0.1:5080;
+		server_name
+		index 		index.html;
+		root		/config/;
 
 		location /locV2/ {
-			index	index2.html
-			root	/configV2/
-			allow_method POST
+			index	index2.html;
+			root	/configV2/;
+			allow_method POST;
 		}
 
-		max_body_size	2MB
-		auto_index	on
+		max_body_size	2MB;
+		auto_index	on;
 
-		error_page 404 /config/error_page/404.html
-		error_page 403 /config/error_page/403.html
-		error_page 400 /config/error_page/400.html
-		error_page 413 /config/error_page/413.html
+		error_page 404 /config/error_page/404.html;
+		error_page 403 /config/error_page/403.html;
+		error_page 400 /config/error_page/400.html;
+		error_page 413 /config/error_page/413.html;
 	}
 	server
 	{
