dynamic location work, but theres a bug where if location 2 name contains location 1 name, it will redirect to location 1 name

--- a/config/server.conf
+++ b/config/server.conf
@@ -10,7 +10,7 @@ https
 		location /locV2/ {
 			index	index2.html
 			root	/configV2/
-			allow_method POST
+			allow_method GET
 		}
 
 		max_body_size	2MB
@@ -47,11 +47,12 @@ https
 		index		index_server2.html
 		root		/config/
 		location /location {
-			index location.html
-			allow_method	GET
+			index	indextest1.html
+			root	/configV2/
 		}
-		location /location2 {
-			index location2.html
+		location /loulou {
+			index	indextest2.html
+			root	/configV2/
 		}
 
 		error_page 404 /config/error_page/404.html
