Location are tested and approved, fixed some parsing and a lot of logic to make it work

--- a/config/server.conf
+++ b/config/server.conf
@@ -46,14 +46,14 @@ https
 		server_name	127.0.0.3
 		index		index_server2.html
 		root		/config/
-		location /location {
-			index	indextest1.html
-			root	/configV2/
-		}
-		location /loulou {
-			index	indextest2.html
-			root	/configV2/
-		}
+		# location /location {
+		# 	index	indextest1.html
+		# 	root	/configV2/
+		# }
+		# location /location2{
+		# 	index	indextest2.html
+		# 	root	/configV2/
+		# }
 
 		error_page 404 /config/error_page/404.html
 		error_page 403 /config/error_page/403.html
