--- a/config/server.conf
+++ b/config/server.conf
@@ -13,7 +13,7 @@ https
 			allow_method GET
 		}
 
-		max_body_size	2MB
+		# max_body_size	MB
 		auto_index	on
 
 		error_page 404 /config/error_page/404.html
@@ -46,15 +46,14 @@ https
 		server_name	127.0.0.3
 		index		index_server2.html
 		root		/config/
-		# location /location {
-		# 	index	indextest1.html
-		# 	root	/configV2/
-		# }
-		# location /location2{
-		# 	index	indextest2.html
-		# 	root	/configV2/
-		# }
-
+		location /location {
+			index	indextest1.html
+			root	/configV2/
+		}
+		location /location2{
+			index	indextest2.html
+			root	/configV2/
+		}
 		error_page 404 /config/error_page/404.html
 		error_page 403 /config/error_page/403.html
 		error_page 400 /config/error_page/400.html
