now properly sending an error 500 if the execve fails, also added the thanos of fd closing in the child process so valgrind doesnt yell at me

--- a/config/server.conf
+++ b/config/server.conf
@@ -2,7 +2,7 @@ https
 {
 	server
 	{
-		listen 127.0.0.1:9000
+		listen 127.0.0.1:4080
 		server_name
 		index index.html
 		root		/config/
@@ -20,6 +20,7 @@ https
 		error_page 403 /config/error_page/403.html
 		error_page 400 /config/error_page/400.html
 		error_page 413 /config/error_page/413.html
+		error_page 500 /config/error_page/500.html
 		error_page 504 /config/error_page/504.html
 	}
 	server
