--- a/config/server.conf
+++ b/config/server.conf
@@ -4,19 +4,18 @@ https
 	{
 		listen 127.0.0.1:9000
 		server_name
-		index index.html
+		index 		index.html
 		root		/config/
 
-		location /loc {
-			index	index2.html
+		location /configV2 {
 			root	/configV2/
+			auto on
 			allow_method GET POST
-			return 301 http://127.0.0.3:6080
 		}
 
 		max_body_size	2MB
-		auto_index	off
-
+		auto_index	on
+	
 		error_page 404 /config/error_page/404.html
 		error_page 403 /config/error_page/403.html
 		error_page 400 /config/error_page/400.html
