--- a/config/server.conf
+++ b/config/server.conf
@@ -6,7 +6,7 @@ https
 		server_name
 		index 		index.html
 		root		/config/
-
+		cgi_path .py:/usr/bin/python3 .php:/usr/bin/php;
 		location /configV2 {
 			root	/configV2/
 			auto on
