--- a/config/server.conf
+++ b/config/server.conf
@@ -7,7 +7,7 @@ https
 		index 		index.html
 		root		/config/
 		location /configV2 {
-			root	/configV2/
+			root	/location/
 			auto on
 			allow_method GET POST
 		}
