undid some stuff because i deleted important error messages

--- a/config/server.conf
+++ b/config/server.conf
@@ -4,11 +4,11 @@ https
 	{
 		listen 127.0.0.1:4080
 		server_name
-		index 		index.html
+		# index 		index.html
 		root		/config/
 		cgi_path .py:/usr/bin/python3 .php:/usr/bin/php;
-		location /configV2 {
-			root	/location/
+		location /TestCgi {
+			root	/config/page/
 			auto on
 			allow_method GET POST
 		}
