more making it pretty

--- a/config/server.conf
+++ b/config/server.conf
@@ -4,7 +4,7 @@ https
 	{
 		listen 127.0.0.1:4080
 		server_name
-		# index 		index.html
+		index 		index.html
 		root		/config/
 		cgi_path .py:/usr/bin/python3 .php:/usr/bin/php;
 		location /TestCgi {
