--- a/config/server.conf
+++ b/config/server.conf
@@ -2,12 +2,13 @@ https
 {
 	server
 	{
-		listen 127.0.0.1:5000
+		listen 127.0.0.1:4088
 		server_name
 		index 		index.html
+		auto_index 		on
 		root		/config/
 		cgi_path .py:/usr/bin/python3 .php:/usr/bin/php;
-
+		allow_method GET POST
 		location /TestDelete {
 			root	page/
 			auto on
@@ -16,7 +17,7 @@ https
 		location /TestPost {
 			root	page/
 			index 	post.html
-			allow_method
+			allow_method GET 
 		}
 		location /TestGet {
 			root	page/
@@ -24,10 +25,10 @@ https
 			allow_method GET POST
 		}
 		location /TestRedirect {
-			return 301 http://127.0.0.3:4080
+			return 301 http://127.0.0.3:5080
 		}
 		location /locationtest {
-			root test/vv
+			root page/
 			allow_method GET POST
 		}
 
@@ -42,12 +43,12 @@ https
 	}
 	server
 	{
-		listen 4080
+		listen 5080
 		server_name 127.0.0.3
 		root		/config/
 
 		cgi_path .py:/usr/bin/python3 .php:/usr/bin/php;
-
+		#index 		index.html
 		max_body_size	5000MB
 		auto_index	on
 	}
