--- a/config/server.conf
+++ b/config/server.conf
@@ -31,6 +31,10 @@ https
 			root page/
 			allow_method GET POST
 		}
+		location /locationDelete {
+			root page/base_donnees/foldertest
+			allow_method GET POST
+		}
 
 		max_body_size	5000MB
 
