I fixed the auto index for location, now main server without location cant even pretend to have auto index for some reasons, somehow discovered with this commit, the second server doesnt work anymore

--- a/config/server.conf
+++ b/config/server.conf
@@ -5,7 +5,7 @@ https
 		listen 127.0.0.1:4088
 		server_name
 		index 		index.html
-		auto_index 		on
+		# auto_index 		on
 		root		/config/
 		cgi_path .py:/usr/bin/python3 .php:/usr/bin/php;
 		allow_method GET POST
@@ -29,6 +29,7 @@ https
 		}
 		location /locationtest {
 			root page/
+			auto on
 			allow_method GET POST
 		}
 		location /locationDelete {
@@ -52,7 +53,7 @@ https
 		root		/config/
 
 		cgi_path .py:/usr/bin/python3 .php:/usr/bin/php;
-
+		index 		index.html
 		max_body_size	50MB
 		auto_index	on
 	}
