pushable version, need to fix some print and make some stuff prettier

--- a/config/server.conf
+++ b/config/server.conf
@@ -5,20 +5,10 @@ https
 		listen 127.0.0.1:4088
 		server_name
 		index 		index.html
-		# auto_index 		on
+		auto_index 		on
 		root		/config/
 		cgi_path .py:/usr/bin/python3 .php:/usr/bin/php;
-		allow_method GET POST
-		location /TestDelete {
-			root	page/
-			auto on
-			allow_method GET
-		}
-		location /TestPost {
-			root	page/
-			index 	post.html
-			allow_method GET 
-		}
+		allow_method GET DELETE POST
 		location /TestGet {
 			root	page/
 			index 	get.html
@@ -29,16 +19,20 @@ https
 		}
 		location /locationtest {
 			root page/
-			auto on
-			allow_method GET POST
+			index 		get.html
+			allow_method GET
+		}
+		location /kapouet {
+			root test/vv/coucou/
 		}
 		location /locationDelete {
-			root page/base_donnees/foldertest
-			allow_method GET POST
+			root base_donnees/
+			allow_method GET DELETEPOST
 		}
 
 		max_body_size	5000MB
 
+		error_page 405 /config/error_page/405.html
 		error_page 404 /config/error_page/404.html
 		error_page 403 /config/error_page/403.html
 		error_page 400 /config/error_page/400.html
