cleaned up some stuff

--- a/config/server.conf
+++ b/config/server.conf
@@ -27,7 +27,7 @@ https
 		}
 		location /locationDelete {
 			root base_donnees/
-			allow_method GET DELETEPOST
+			allow_method GET DELETE POST
 		}
 
 		max_body_size	5000MB
@@ -47,9 +47,20 @@ https
 		root		/config/
 
 		cgi_path .py:/usr/bin/python3 .php:/usr/bin/php;
-		index 		index.html
+		index 		index2.html
 		max_body_size	50MB
-		auto_index	on
+		auto_index 		on
+	}
+	server
+	{
+		listen 127.0.0.5:4040
+		server_name
+		root		/config/
+
+		cgi_path .py:/usr/bin/python3 .php:/usr/bin/php;
+		index 		index3.html
+		max_body_size	50MB
+		auto_index 		on
 	}
 }
 
